<resources>
    <string name="app_name">FindARoommate-Android</string>
    <string name="app_title">Find a roommate</string>
    <string name="host" translatable="false">192.168.43.125:8089</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign out</string>
    <string name="drawer_header_text">Drawer Header</string>
    <string name="homepage_button_1">I am looking for a room to live in.</string>
    <string name="homepage_button_2">I have a room to rent.</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="sign_up">Sign up</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="sign_up_google">Sign up with google</string>
    <string name="sign_up_mail">Sign up with mail</string>
    <string name="sign_up_fb">Sign up with facebook</string>
    <string name="title_activity_settings">Settings</string>
    <string name="general_header">General</string>
    <string name="notification_header">Notifications</string>
    <string name="notification_mail_header">Notifications on mail</string>
    <string name="reminder_day_title">Reminder (num of days before)</string>
    <string name="language_title">Language</string>
    <string name="unit_title">Distance unit</string>
    <string name="should_remind_title">Reminder option</string>
    <string name="should_send_conf_at_mail_title">Sending booking confirmation</string>
    <string name="should_send_req_at_mail_title">Sending booking request</string>
    <string name="new_add_notif_title">Recieving info about new add near me</string>
    <string name="booking_reminder_notif_title">Reminders about my upcoming bookings</string>
    <string name="new_message_notif_title">New message push notification</string>
    <string name="new_review_notif_title">New review push nofitication</string>
    <string name="should_send_new_ad_title">Sending new ad submission</string>
    <string name="reminder_day_error">Value should be number between 1 and 15</string>
    <string name="stay_notif_title">Receive notification about booking </string>
    <string name="remind_summary">Remind option for upcoming stays</string>
    <string name="prefs_lang">language</string>
    <string name="prefs_should_remind">should_remind</string>
    <string name="prefs_remind_day">reminder_day</string>
    <string name="prefs_unit">unit</string>
    <string name="prefs_new_message_notif">new_message_notif</string>
    <string name="prefs_new_review_notif">new_review_notif</string>
    <string name="prefs_should_confirm_mail">should_confirm</string>
    <string name="prefs_should_request_mail">should_request</string>
    <string name="prefs_should_new_ad_mail">should_new_ad</string>
    <string name="prefs_stay_notif">stay_notif</string>
    <string name="search_form_title">Search</string>
    <string name="title_room_list">Ads</string>
    <string name="title_room_detail">Ad Detail</string>
    <string name="find_a_roommate">Find a Roommate</string>
    <string name="enter_location">Enter location</string>
    <string name="where_do_you_want_to_live">Where do you want to live</string>
    <string name="filters">Filters</string>
    <string name="monthly_budget">Monthly budget</string>
    <string name="minimum">Minimum</string>
    <string name="maximum">Maximum</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="available">Available</string>
    <string name="now">Now</string>
    <string name="choose_date">Choose date</string>
    <string name="duration_of_stay">Duration of stay</string>
    <string name="short_1_5_months">Short(1-5 months)</string>
    <string name="medium_6_11_months">Medium (6-11 months)</string>
    <string name="long_12_months">Long (12+ months)</string>
    <string name="flat_amenities">Flat amenities</string>
    <string name="tv">TV</string>
    <string name="wifi">WiFi</string>
    <string name="apply">Apply</string>
    <string name="date_required_error_msg">If one date field input is filled, the other is mandatory!</string>
    <string name="date_order_error_msg">Invalid date order from,to</string>
    <string name="date_format">MMMM dd, yyyy</string>
    <string name="menu_profile_review_title">Review</string>
    <string name="menu_profile_ads_title">My ads</string>
    <string name="menu_profile_history_title">History</string>
    <string name="fab_profile_edit_tooltip">Edit profile</string>
    <string name="profile_form_title">My profile</string>
    <string name="profile_form_active_since">Active since </string>
    <string name="profile_form_photo">Photo</string>
    <string name="profile_form_first_name">First name</string>
    <string name="profile_form_last_name">Last name</string>
    <string name="profile_form_gender">Choose your gender</string>
    <string name="profile_form_birth_day">Date of birth</string>
    <string name="profile_form_language">Your languages</string>
    <string name="profile_form_atrs_about">Tells us more about you</string>
    <string name="profile_form_personality">Personality</string>
    <string name="profile_form_lifestyle">Lifestyle</string>
    <string name="profile_form_sport">Sport</string>
    <string name="profile_form_science">Science</string>
    <string name="profile_form_film">Film</string>
    <string name="profile_form_music">Music</string>
    <string name="profile_form_occupation">Occupation</string>
    <string name="profile_form_working_status">Working status</string>
    <string name="profile_form_study_level">Study level</string>
    <string name="profile_form_education">Education</string>
    <string name="profile_form_desc">Optional description</string>
    <string name="profile_form_update">Update</string>
    <string name="profile_form_save">Save profile</string>
    <string name="profile_form_success">Profile successfully updated</string>
    <string name="ad_form_room">Room</string>
    <string name="ad_form_property">Property</string>
    <string name="ad_form_mate_prefs">Mate prefs</string>
    <string name="ad_form_final">Final</string>
    <string name="ad_form_amenity">Amenities</string>
    <string name="ad_form_header">New ad</string>
    <string name="ad_form_success">Ad successfully created</string>
    <string name="ad_form_save">Save ad</string>
    <string name="ad_form_title">New ad</string>
    <string name="ad_form_location">Location</string>
    <string name="ad_form_street">Street</string>
    <string name="ad_form_longitude">Longitude</string>
    <string name="ad_form_latitude">Latitude</string>
    <string name="ad_form_property_size_hint">Flat size (in m2)</string>
    <string name="ad_form_mmates_info">Who currently lives</string>
    <string name="ad_form_women">Female</string>
    <string name="ad_form_men">Male</string>
    <string name="ad_form_property_type">Type of property</string>
    <string name="ad_form_max_person">Num of maximum person</string>
    <string name="ad_form_ad_title">Title of add</string>
    <string name="ad_form_house_rules">House rules</string>
    <string name="ad_form_pets">Pets</string>
    <string name="ad_form_couple">Couples</string>
    <string name="ad_form_smoking">Smoking</string>
    <string name="ad_form_flat">Flat</string>
    <string name="ad_form_private_room">Private room</string>
    <string name="ad_form_shared_room">Shared room</string>
    <string name="ad_form_desc">Description</string>
    <string name="ad_form_bed_type">Choose a bed type</string>
    <string name="ad_form_single_bed">Single bed</string>
    <string name="ad_form_double_bed">Double bed</string>
    <string name="ad_form_sofa_bec">Sofa bed</string>
    <string name="ad_form_room_size_hint">Room size (in m2)</string>
    <string name="ad_form_available_info">Room is available:</string>
    <string name="ad_form_available_from">From</string>
    <string name="ad_form_available_to">To</string>
    <string name="ad_form_stay_cond_info">Person can stay min/max:</string>
    <string name="ad_form_costs">Costs (in €)</string>
    <string name="ad_form_bills_included">Bills\'s included</string>
    <string name="ad_form_deposit">Deposit (in €)</string>
    <string name="ad_form_deposit_required">No deposit required</string>
    <string name="ad_form_mail_content">Dear %USER_NAME%, you have just successfully created your new ad.</string>
    <string name="ad_form_mail_subject">"Notification about adding your new ad"</string>
    <string name="ad_form_mail_additional_info">"Open application for additional information."</string>
    <string name="ad_form_location_desc">Insert location of your apartment</string>
    <string name="ad_form_title_invalid">Ad title field is required</string>
    <string name="ad_form_address_invalid">Ad address field is required</string>
    <string name="ad_form_price_invalid">Ad price field is required</string>
    <string name="ad_form_available_from_invalid">Ad available from field is required</string>
    <string name="ad_form_available_until_invalid">Ad available from field is required</string>
    <string name="ad_form_max_person_invalid">Ad max person does not much with current number</string>
    <string name="google_maps_API_key">AIzaSyCqysn5uvaOW6OhpBG8UWXViZ6PROqXqXo</string>
    <string name="messenger">Messenger</string>
    <string name="title_activity_sign_up_google">SignUpGoogleActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="facebook_app_id">1501643706681249</string>
    <string name="fb_login_protocol_scheme">fb1501643706681249</string>
    <string name="title_activity_my_ads">MyAdsActivity</string>
    <string name="notif_upcoming_stays_title">Upcoming stays notification!</string>
    <string name="notif_upcoming_stays_text">Dear %NAME%, you\'ve got upcoming stay in less than %DAY% days. Press %ACTION% for more details.</string>
    <string name="notif_upcoming_stays_action">Go to upcoming stays</string>
    <string name="notif_settings_action">Go to settings</string>
    <string name="notif_server_error_title">Server error</string>
    <string name="notif_booking_topic">Booking</string>
    <string name="notif_booking_title">Booking notification!</string>
    <string name="notif_booking_text">Your %AD%(%TITLE%) has changed its status. Current status: %STATUS%.</string>
    <string name="notif_profile_action">Go to your profile</string>
    <string name="notif_review_title">Review notification!</string>
    <string name="notif_review_topic">Review</string>
    <string name="notif_review_edit_message">You\'ve successfully entered review for %AD%. Visit your profile for more info.</string>
</resources>