<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <item
            android:id="@+id/search_item"
            android:icon="@drawable/ic_location"
            android:title="@string/app_title" />
        <item
            android:id="@+id/profile_item"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/messages_item"
            android:icon="@drawable/ic_email"
            android:title="@string/messenger" />
        <item
            android:id="@+id/settings_item"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/sign_out_item"
            android:icon="@drawable/ic_signout"
            android:title="@string/sign_out" />
</menu>