<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/activity_vertical_margin"
        >
        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:layout_gravity="center"
            android:text="@string/ad_form_title"
            android:textColor="@color/colorAccent"
            android:textSize="30sp">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/form_margin_up"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ad_form_property_type"
                android:textColor="@color/colorAccent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:paddingStart="@dimen/form_margin_up"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

            </LinearLayout>
            <RadioGroup
                android:id="@+id/new_add_property_type"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/radio_private_room"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/radio_private_room"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ad_form_private_room"/>
                <RadioButton
                    android:id="@+id/radio_shared_room"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ad_form_shared_room"/>
                <RadioButton
                    android:id="@+id/radio_flat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ad_form_flat"/>
            </RadioGroup>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/form_margin_up"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ad_form_property_size_hint"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ad_form_property_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/form_margin_up"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ad_form_mmates_info"
            android:textColor="@color/colorAccent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingStart="@dimen/form_margin_up"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ad_form_women"
                android:textColor="@color/colorAccent"
                android:paddingStart="@dimen/form_margin_up"
                >
            </TextView>
            <NumberPicker
                android:id="@+id/ad_form_picker_women"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:orientation="vertical"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ad_form_men"
                android:textColor="@color/colorAccent"
                android:paddingStart="@dimen/form_margin_up"
                >
            </TextView>
            <NumberPicker
                android:id="@+id/ad_form_picker_men"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:orientation="vertical"
                />
        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/form_margin_up"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ad_form_max_person"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ad_form_max_person"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/form_margin_up"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ad_form_house_rules"
            android:textColor="@color/colorAccent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingStart="@dimen/form_margin_up"
            >
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/new_add_house_rules"
                >
                <RadioButton
                    android:id="@+id/fidrst"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ad_form_smoking"
                    android:layout_weight="1"
                    />
                <RadioButton
                    android:id="@+id/sedcond"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ad_form_couple"
                    android:layout_weight="1"
                    />
                <RadioButton
                    android:id="@+id/sdecdond"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ad_form_pets"
                    android:layout_weight="1"
                    />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>